# agrimind-ai

./: .env.example  .gitignore  pyproject.toml  requirements.txt
src/agrimind/: __init__.py  config.py
src/agrimind/application/: composition_root.py  ingestion_pipeline.py  rag_pipeline.py
src/agrimind/infrastructure/chunking/: recursive_chunker.py
src/agrimind/infrastructure/embedding/: e5_embedder.py
src/agrimind/infrastructure/extraction/: pymupdf_extractor.py
src/agrimind/infrastructure/llm/: foundry_local_client.py
src/agrimind/infrastructure/vectorstore/: chroma_store.py
